--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="image-box">
-      <img src="./images/image-qr-code.png">
+      <img src="./image-qr-code.png">
     </div>
     <!-- <div class="text-box"> -->
       <div class="head-text">
