--- a/index.html
+++ b/index.html
@@ -11,23 +11,18 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   
 </head>
 <body>
-  <div class="container">
+  <main>
     <div class="image-box">
-      <img src="./image-qr-code.png">
+      <img src="./image-qr-code.png" alt="QR-code Image">
     </div>
-    <!-- <div class="text-box"> -->
-      <div class="head-text">
-        <p>Improve your front-end<br>skills by building projects</p>
-      </div>
-      <div class="sub-text">
-        <p>Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p>
-        </div>
-    <!-- </div> -->
-  </div>
+    <h1>Improve your front-end skills by building projects</h1>
+  
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </main>
 
 
   <!-- <div class="attribution">
